# ffdvr

./: Makefile.am  Makefile.in  README  README.md  configure.ac
src/: Makefile.am  Makefile.in  ffdvr.conf  main.cpp
